# posit-plotnine-contest-2025

./: .gitignore  .nojekyll  README.md  index.html  index.qmd  pyproject.toml
assets/data/: yougov_ed.csv  yougov_green.csv  yougov_international.csv  yougov_keir.csv  yougov_kemi.csv  yougov_leftwing.csv  yougov_nigel.csv  yougov_politicians.csv  yougov_tories_labour_reform.csv
index_files/libs/bootstrap/: bootstrap.min.css
