[project]
name = "posit-plotnine-contest-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "contourpy>=1.3.3",
    "cycler>=0.12.1",
    "fonttools>=4.59.2",
    "ipykernel>=6.30.1",
    "ipython>=9.5.0",
    "kiwisolver>=1.4.9",
    "matplotlib>=3.10.6",
    "mizani>=0.14.2",
    "nbclient>=0.10.2",
    "nbformat>=5.10.4",
    "numpy>=2.3.3",
    "packaging>=25.0",
    "pandas>=2.3.2",
    "patsy>=1.0.1",
    "pillow>=11.3.0",
    "plotnine>=0.15.0",
    "polars>=1.33.1",
    "pyarrow>=21.0.0",
    "pyparsing>=3.2.4",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.2",
    "pyyaml>=6.0.2",
    "scipy>=1.16.2",
    "six>=1.17.0",
    "statsmodels>=0.14.5",
    "tzdata>=2025.2",
    "wcwidth>=0.2.13",
    "webcolors>=24.11.1",
    "webencodings>=0.5.1",
    "websocket-client>=1.8.0",
    "widgetsnbextension>=4.0.14",
]
